Tue Apr 11 16:28:01 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Simpler check for VALGRIND being set to empty value.

Tue Apr 11 01:04:32 BST 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Add a summary.

Tue Apr 11 00:45:55 BST 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updates from boxes which were down when I did the
	  release.

Mon Apr 10 17:06:46 BST 2006  Olly Betts <olly@survex.com>

	* api/omenquire.cc,backends/flint/flint_btreebase.cc,
	  backends/flint/flint_utils.h,backends/quartz/btree_base.cc,
	  backends/quartz/quartz_utils.h,common/omassert.h:
	  Fix more MSVC7 warnings (I spoke too soon).

Mon Apr 10 15:56:52 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Another MSVC7 warning fix.  Should be free
	  of warnings now.

Mon Apr 10 14:46:34 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_utils.h,
	  backends/quartz/quartz_utils.h,bin/quartzcompact.cc,
	  bin/xapian-compact.cc,common/omdebug.h,common/utils.h,
	  include/xapian/query.h,languages/header.h,matcher/multimatch.cc:
	  Fix assorted MSVC7 warnings.

Sun Apr 09 04:56:09 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Expand on details of what's required when changing Xapian
	  (discuss documentation requirements, expand on why feature tests
	  are vital).
	* HACKING: Update section on building debian packages.

Sat Apr 08 20:02:19 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Updated for 0.9.5.

Fri Apr 07 23:53:08 BST 2006  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/api_db.cc,tests/btreetest.cc: Correct
	  spelling of "existant" to "existent".

Fri Apr 07 19:13:24 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: We don't use strcasecmp, so don't probe for it.

Fri Apr 07 18:30:40 BST 2006  Olly Betts <olly@survex.com>

	* common/utils.h: Fixes for MSVC7 compilation.

Fri Apr 07 17:19:43 BST 2006  Olly Betts <olly@survex.com>
